--- a/vignettes/mediation.bib
+++ b/vignettes/mediation.bib
@@ -91,12 +91,14 @@
 	Year = {2010}}
 
 @article{ImaiDesign,
-	Author = {Kosuke Imai and Tingley, Dustin and Teppei Yamamoto},
-	Journal = {Journal of the Royal Statistical Society, Series {A} (Statistics in Society)},
+	Author = {Imai, Kosuke and Tingley, Dustin and Yamamoto, Teppei},
+	Journal = {Journal of the Royal Statistical Society, {Series A} (Statistics in Society)},
+        Number = {1},
+	Pages = {5--51},
 	Title = {Experimental Designs for Identifying Causal Mechanisms (with discussions)},
-	Url = {http://imai.princeton.edu/research/Design.html},
-	Year = {2012},
-	Bdsk-Url-1 = {http://imai.princeton.edu/research/Design.html}}
+	Volume = {176},
+        Month = {January},
+	Year = {2013}}
 
 @article{MediateStata,
 	Attachments = {http://scholar.harvard.edu/sites/scholar.iq.harvard.edu/files/dtingley/files/mediationstata_0.pdf},
@@ -162,7 +164,7 @@
 
 @inbook{imai:etal:10,
 	Address = {New York},
-	Author = {Kosuke Imai and Keele, Luke and Tingley, Dustin and Teppei Yamamoto},
+	Author = {Kosuke Imai and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
 	Booktitle = {Advances in Social Science Research Using R},
 	Organization = {Springer},
 	Pages = {129-154},
@@ -182,3 +184,21 @@
 	Title = {What Triggers Public Opposition to Immigration? Anxiety, Group Cues, and Immigration},
 	Volume = {52},
 	Year = {2008}}
+
+@article{Pearl:2013,
+	author = {Pearl, Judea},
+	title = {Interpretation and Identification of Causal Mediation},
+	journal = {Psychological Methods},
+	year = {2013},
+	pages = {Forthcoming},
+}
+
+@article{imai:etal:2013,
+	author = {Imai, Kosuke and Keele, Luke and Tingley, Dustin and Yamamoto, Teppei},
+	title = {Comments on Pearl (2013)},
+	journal = {Psychological Methods},
+	year = {2013},
+	pages = {Forthcoming},
+}
+	
+	
